# ollama-nvim-cli

./: .gitignore  .markdownlint.json  README.md  ollama-nvim-cli.spec  pyproject.toml
scripts/: build.py
src/ollama_nvim_cli/: __init__.py  chat.py  cli.py  config.py  interfaces.py
src/ollama_nvim_cli/api/: __init__.py  ollama.py
src/ollama_nvim_cli/commands/config/: __init__.py  config.py
src/ollama_nvim_cli/lib/: __init__.py  config.py  history.py
src/ollama_nvim_cli/prompt/: __init__.py  chat.py  editor.py  keyboard.py  prompt.py
