[project]
name = "ollama-nvim-cli"
version = "1.1.0"
description = "A CLI tool for chatting with Ollama models using Neovim/LunarVim"
authors = [{ name = "Tadeáš Fořt", email = "business@tadeasfort.com" }]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.3.5",
    "prompt-toolkit>=3.0.48",
    "pyyaml>=6.0.2",
    "httpx>=0.27.2",
    "pyaml>=24.9.0",
    "catppuccin>=2.3.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.11.1",
    "ruff>=0.8.0",
    "ruff-lsp>=0.0.59",
    "twine>=5.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_nvim_cli"]

[tool.rye.scripts]
build-binary = { cmd = "python scripts/build.py" }
"ollama-nvim-cli" = { cmd = "python -m ollama_nvim_cli.cli" }
onc = { cmd = "python -m ollama_nvim_cli.cli" }
build-pypi = { chain = [
    "pip install build twine",
    "python -m build",
    "twine check dist/*",
] }

[project.scripts]
onc = "ollama_nvim_cli.cli:entry_point"
